template: update cache